Projects/task4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: task4
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
